# RPCChatServer

./: README.md
client/: CMakeLists.txt
client/src/: CMakeCache.txt  CMakeLists.txt  Makefile  client.cpp  cmake_install.cmake
client/src/src/: Makefile  cmake_install.cmake
protos/: ChatService.pb.cc  ChatService.pb.h  ChatService.proto  FriendService.pb.cc  FriendService.pb.h  FriendService.proto  GateServer.pb.cc  GateServer.pb.h  GateServer.proto  GroupService.pb.cc  GroupService.pb.h  GroupService.proto  OfflineService.pb.cc  OfflineService.pb.h  OfflineService.proto  UserService.pb.cc  UserService.pb.h  UserService.proto
server/chatservice/: CMakeLists.txt
server/chatservice/include/: chatservice.hpp
server/chatservice/src/: CMakeLists.txt  chatservice.cpp  main.cpp
server/friendservice/: CMakeLists.txt
server/friendservice/include/: friendservice.hpp
server/friendservice/src/: CMakeLists.txt  friendservice.cpp  main.cpp
server/gateservice/: CMakeLists.txt
server/gateservice/include/: gateserver.hpp  gateservice.hpp
server/gateservice/src/: CMakeLists.txt  gateserver.cpp  gateservice.cpp  main.cpp
server/groupservice/: CMakeLists.txt
server/groupservice/include/: groupservice.hpp
server/groupservice/src/: CMakeLists.txt  groupservice.cpp  main.cpp
server/third/mprpc/: mprpcapplication.cc  mprpcapplication.h  mprpcchannel.cc  mprpcchannel.h  mprpcconfig.cc  mprpcconfig.h  mprpccontroller.cc  mprpccontroller.h  rpcprovider.cc  rpcprovider.h
server/third/mymuduo/: Acceptor.cc  Acceptor.h  Buffer.cc  (+38 more)
server/userservice/: CMakeLists.txt
(+17 files in other folders)
